Solving Issue of icons not showing

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,12 +1,9 @@
 @import 'variables';
 @import 'library';
 
+
 html {
     font-size: 62.5%; // 1rem is 10px
-}
-
-i {
-    font-family: "Font Awesome 5 Free" !important;
 }
 
 *,
